SQL performance improvements